// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfileForm render function It adds validation error for age 1`] = `
<UserProfileForm>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      Du er logget på via 
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedAge"
      htmlFor="acceptedAge"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedAge"
        name="acceptedAge"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
       Jeg er over 13 år
    </label>
    <label
      className="checkbox"
      data-cy="user-form-acceptedTerms"
      htmlFor="acceptedTerms"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedTerms"
        name="acceptedTerms"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
       Jeg har læst og accepteret
       
      <a
        href="#terms"
      >
        reglerne for anvendelse af Læsekompasset
      </a>
    </label>
    <div
      className="error mb2"
    >
      Dit brugernavn skal være minimum 4 karakterer langt
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      Opret profil
       
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function It adds validation error for age 2`] = `
<UserProfileForm
  acceptedAge={true}
>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      Du er logget på via 
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedTerms"
      htmlFor="acceptedTerms"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedTerms"
        name="acceptedTerms"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
       Jeg har læst og accepteret
       
      <a
        href="#terms"
      >
        reglerne for anvendelse af Læsekompasset
      </a>
    </label>
    <div
      className="error mb2"
    >
      Dit brugernavn skal være minimum 4 karakterer langt
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      Opret profil
       
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function It adds validation error for terms 1`] = `
<UserProfileForm>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      Du er logget på via 
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedAge"
      htmlFor="acceptedAge"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedAge"
        name="acceptedAge"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
       Jeg er over 13 år
    </label>
    <label
      className="checkbox"
      data-cy="user-form-acceptedTerms"
      htmlFor="acceptedTerms"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedTerms"
        name="acceptedTerms"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
       Jeg har læst og accepteret
       
      <a
        href="#terms"
      >
        reglerne for anvendelse af Læsekompasset
      </a>
    </label>
    <div
      className="error mb2"
    >
      Dit brugernavn skal være minimum 4 karakterer langt
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      Opret profil
       
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function It adds validation error for terms 2`] = `
<UserProfileForm
  acceptedTerms={true}
>
  <form
    className="profile-form needs-validation"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  >
    <div
      className="input-group mb2   has-feedback"
    >
      <input
        className="form-control mb3   has-feedback"
        data-cy="user-form-name"
        name="name"
        onChange={[Function]}
        placeholder="Vælg brugernavn"
        type="text"
        value=""
      />
      <span
        aria-hidden="true"
        className="form-control-feedback "
      >
        <i
          className="material-icons"
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
           
        </i>
      </span>
    </div>
    <p
      className="mb6"
    >
      Du er logget på via 
    </p>
    <label
      className="checkbox"
      data-cy="user-form-acceptedAge"
      htmlFor="acceptedAge"
    >
      <input
        checked={false}
        className="checkbox"
        id="acceptedAge"
        name="acceptedAge"
        onChange={[Function]}
        type="checkbox"
      />
      <span />
       Jeg er over 13 år
    </label>
    <div
      className="error mb2"
    >
      Dit brugernavn skal være minimum 4 karakterer langt
    </div>
    <button
      className="btn btn-success btn-block"
      data-cy="user-form-submit"
    >
      Opret profil
       
    </button>
  </form>
</UserProfileForm>
`;

exports[`UserProfileForm render function renders an user profile form 1`] = `
<form
  className="profile-form needs-validation"
  onSubmit={[Function]}
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="input-group mb2   has-feedback"
  >
    <input
      className="form-control mb3   has-feedback"
      data-cy="user-form-name"
      name="name"
      onChange={[Function]}
      placeholder="Vælg brugernavn"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      className="form-control-feedback "
    >
      <i
        className="material-icons"
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
         
      </i>
    </span>
  </div>
  <p
    className="mb6"
  >
    Du er logget på via 
  </p>
  <label
    className="checkbox"
    data-cy="user-form-acceptedAge"
    htmlFor="acceptedAge"
  >
    <input
      checked={false}
      className="checkbox"
      disabled={undefined}
      id="acceptedAge"
      name="acceptedAge"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Jeg er over 13 år
  </label>
  <label
    className="checkbox"
    data-cy="user-form-acceptedTerms"
    htmlFor="acceptedTerms"
  >
    <input
      checked={false}
      className="checkbox"
      disabled={undefined}
      id="acceptedTerms"
      name="acceptedTerms"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Jeg har læst og accepteret
     
    <a
      href="#terms"
    >
      reglerne for anvendelse af Læsekompasset
    </a>
  </label>
  <button
    className="btn btn-success btn-block"
    data-cy="user-form-submit"
    disabled={undefined}
  >
    Opret profil
     
    
  </button>
</form>
`;
